@@ -1,3 +1,8 @@
+2015-12-16 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* sim/ucsim/cmd.src/cmdset.cc
+	  Apply a modified version of patch #250. 
+
 2015-12-14 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCast.c:
